2012-08-04  Raymond Penners  <raymond.penners@intenct.nl>

	* account: When signing up, instead of generating a completely
	random username a more sensible username is automatically derived
	from first/last name or e-mail.

2012-07-18  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.7.0 released.

2012-07-06  Raymond Penners  <raymond.penners@intenct.nl>

	* Facebook: Facundo Gaich contributed support for dynamically
	deriving the Facebook locale from the Django locale, thanks!.

2012-06-27  Raymond Penners  <raymond.penners@intenct.nl>

	* OAuth: All OAuth/OAuth2 tokens are now consistently stored
	across the board. Cleaned up OAuth flow removing superfluous
	redirect.

	* Facebook: Dropped Facebook SDK dependency.

	* socialaccount: DRY focused refactoring of social login.

2012-06-26  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added support for Google OAuth2 and Facebook
	OAuth2. Fixed GitHub.

2012-06-22  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added verified_email_required decorator.

2012-06-20  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: When signing up, user.first/last_name where
	always taken from the provider signup data, even when a custom
	signup form was in place that offered user inputs for editting
	these fields. Fixed.

2012-06-20  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.6.0 released.

	* account: Added ACCOUNT_USER_DISPLAY to render a user name
	without making assumptions on how the user is represented.

2012-06-18  Raymond Penners  <raymond.penners@intenct.nl>

	* allauth, socialaccount: Removed the last remaining bits of
	hardcodedness with respect to the enabled social authentication
	providers.

2012-06-11  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added ACCOUNT_AUTHENTICATION_METHOD setting, supporting
	login by username, e-mail or both.

2012-06-08  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.5.0 released.
