@@ -8,3 +8,4 @@ Contributors
 Chris Beaven
 Facundo Gaich
 Vuong Nguyen
+Sam Solomon
